doctors page without responsive

--- a/index.html
+++ b/index.html
@@ -196,11 +196,12 @@
 
     <!-- Start reservation info -->
     <section class="reservation_info">
-      <form class="container">
+      <form action="doctors.html" class="container">
         <h6>Reservation information</h6>
         <div class="row">
           <div class="col-lg-6 col-md-6 col-12">
             <div class="form-group">
+              <i class="fa-solid fa-location-dot"></i>
               <select
                 name=""
                 id=""
@@ -214,6 +215,7 @@
           </div>
           <div class="col-lg-6 col-md-6 col-12">
             <div class="form-group">
+              <i class="fa-solid fa-tooth"></i>
               <select
                 name=""
                 id=""
@@ -227,6 +229,7 @@
           </div>
           <div class="col-lg-6 col-md-6 col-12">
             <div class="form-group">
+              <i class="fa-solid fa-building"></i>
               <select
                 name=""
                 id=""
@@ -330,7 +333,8 @@
               <div class="statistics_card">
                 <i class="fa-solid fa-location-dot"></i>
                 <div class="statistics_text">
-                  <p class="statistics_number">+<span class="counter">120</span>
+                  <p class="statistics_number">
+                    +<span class="counter">120</span>
                   </p>
                   <span class="statistics_object">branch</span>
                 </div>
@@ -341,7 +345,8 @@
               <div class="statistics_card">
                 <i class="fa-solid fa-user-doctor"></i>
                 <div class="statistics_text">
-                  <p class="statistics_number">+<span class="counter">950</span>
+                  <p class="statistics_number">
+                    +<span class="counter">950</span>
                   </p>
                   <span class="statistics_object">Specialized doctors</span>
                 </div>
@@ -352,7 +357,8 @@
               <div class="statistics_card">
                 <i class="fa-solid fa-hand-holding-heart"></i>
                 <div class="statistics_text">
-                  <p class="statistics_number">+<span class="counter">1,850,000</span>
+                  <p class="statistics_number">
+                    +<span class="counter">1,850,000</span>
                   </p>
                   <span class="statistics_object">Trusted patients</span>
                 </div>
@@ -363,7 +369,8 @@
               <div class="statistics_card">
                 <i class="fa-solid fa-tooth"></i>
                 <div class="statistics_text">
-                  <p class="statistics_number">+<span class="counter">1,500,000</span>
+                  <p class="statistics_number">
+                    +<span class="counter">1,500,000</span>
                   </p>
                   <span class="statistics_object">The surgery</span>
                 </div>
@@ -378,7 +385,7 @@
             <div class="miswak_academy">
               <h3 class="title">Miswak Academy</h3>
               <p class="text">Be part of the toothpick</p>
-              <img src="./media/image/tooth.png" alt="tooth">
+              <img src="./media/image/tooth.png" alt="tooth" />
               <a href="#" class="join_btn btn">Join us</a>
             </div>
           </div>
@@ -396,86 +403,306 @@
           <a href="#" class="btn show_all">Show all doctors</a>
         </div>
         <h2 class="title">Learn about our best dentists</h2>
-        <p class="text">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam
-          nonumy eirmod tempor invidunt ut labore et dolore magna</p>
-          <!-- Start card doctor -->
-          <div class="card_doctor">
-            <img src="./media/image/doctors1.jpg" alt="doctors">
-            <div class="description_doctor">
-              <h5 class="title">DR. Ahmed Hawam</h5>
-              <span class="specialize">Sunni installations specialize</span>
-              <span class="address">Dammam Branch, Al -Mawda neighborhood, Aisha Street</span>
-              <div class="rating">
-                <i class="fa-solid fa-star active"></i>
-                <i class="fa-solid fa-star active"></i>
-                <i class="fa-solid fa-star active"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-              </div>
-              <a href="#" class="btn booking">Book now</a>
+        <p class="text">
+          Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam
+          nonumy eirmod tempor invidunt ut labore et dolore magna
+        </p>
+        <!-- Start card doctor -->
+        <div class="card_doctor">
+          <img src="./media/image/doctors1.jpg" alt="doctors" />
+          <div class="description_doctor">
+            <h5 class="title">DR. Ahmed Hawam</h5>
+            <span class="specialize">Sunni installations specialize</span>
+            <span class="address"
+              >Dammam Branch, Al -Mawda neighborhood, Aisha Street</span
+            >
+            <div class="rating">
+              <i class="fa-solid fa-star active"></i>
+              <i class="fa-solid fa-star active"></i>
+              <i class="fa-solid fa-star active"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
             </div>
+            <a href="#" class="btn booking">Book now</a>
           </div>
-          <!-- End card doctor -->
+        </div>
+        <!-- End card doctor -->
 
-          <!-- Start card doctor -->
-          <div class="card_doctor">
-            <img src="./media/image/doctors1.jpg" alt="doctors">
-            <div class="description_doctor">
-              <h5 class="title">DR. Ahmed Hawam</h5>
-              <span class="specialize">Sunni installations specialize</span>
-              <span class="address">Dammam Branch, Al -Mawda neighborhood, Aisha Street</span>
-              <div class="rating">
-                <i class="fa-solid fa-star active"></i>
-                <i class="fa-solid fa-star active"></i>
-                <i class="fa-solid fa-star active"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-              </div>
-              <a href="#" class="btn booking">Book now</a>
+        <!-- Start card doctor -->
+        <div class="card_doctor">
+          <img src="./media/image/doctors1.jpg" alt="doctors" />
+          <div class="description_doctor">
+            <h5 class="title">DR. Ahmed Hawam</h5>
+            <span class="specialize">Sunni installations specialize</span>
+            <span class="address"
+              >Dammam Branch, Al -Mawda neighborhood, Aisha Street</span
+            >
+            <div class="rating">
+              <i class="fa-solid fa-star active"></i>
+              <i class="fa-solid fa-star active"></i>
+              <i class="fa-solid fa-star active"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
             </div>
+            <a href="#" class="btn booking">Book now</a>
           </div>
-          <!-- End card doctor -->
+        </div>
+        <!-- End card doctor -->
 
-          <!-- Start card doctor -->
-          <div class="card_doctor">
-            <img src="./media/image/doctors1.jpg" alt="doctors">
-            <div class="description_doctor">
-              <h5 class="title">DR. Ahmed Hawam</h5>
-              <span class="specialize">Sunni installations specialize</span>
-              <span class="address">Dammam Branch, Al -Mawda neighborhood, Aisha Street</span>
-              <div class="rating">
-                <i class="fa-solid fa-star active"></i>
-                <i class="fa-solid fa-star active"></i>
-                <i class="fa-solid fa-star active"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-              </div>
-              <a href="#" class="btn booking">Book now</a>
+        <!-- Start card doctor -->
+        <div class="card_doctor">
+          <img src="./media/image/doctors1.jpg" alt="doctors" />
+          <div class="description_doctor">
+            <h5 class="title">DR. Ahmed Hawam</h5>
+            <span class="specialize">Sunni installations specialize</span>
+            <span class="address"
+              >Dammam Branch, Al -Mawda neighborhood, Aisha Street</span
+            >
+            <div class="rating">
+              <i class="fa-solid fa-star active"></i>
+              <i class="fa-solid fa-star active"></i>
+              <i class="fa-solid fa-star active"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
             </div>
+            <a href="#" class="btn booking">Book now</a>
           </div>
-          <!-- End card doctor -->
+        </div>
+        <!-- End card doctor -->
 
-          <!-- Start card doctor -->
-          <div class="card_doctor">
-            <img src="./media/image/doctors1.jpg" alt="doctors">
-            <div class="description_doctor">
-              <h5 class="title">DR. Ahmed Hawam</h5>
-              <span class="specialize">Sunni installations specialize</span>
-              <span class="address">Dammam Branch, Al -Mawda neighborhood, Aisha Street</span>
-              <div class="rating">
-                <i class="fa-solid fa-star active"></i>
-                <i class="fa-solid fa-star active"></i>
-                <i class="fa-solid fa-star active"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-              </div>
-              <a href="#" class="btn booking">Book now</a>
+        <!-- Start card doctor -->
+        <div class="card_doctor">
+          <img src="./media/image/doctors1.jpg" alt="doctors" />
+          <div class="description_doctor">
+            <h5 class="title">DR. Ahmed Hawam</h5>
+            <span class="specialize">Sunni installations specialize</span>
+            <span class="address"
+              >Dammam Branch, Al -Mawda neighborhood, Aisha Street</span
+            >
+            <div class="rating">
+              <i class="fa-solid fa-star active"></i>
+              <i class="fa-solid fa-star active"></i>
+              <i class="fa-solid fa-star active"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
             </div>
+            <a href="#" class="btn booking">Book now</a>
           </div>
-          <!-- End card doctor -->
+        </div>
+        <!-- End card doctor -->
       </div>
     </section>
     <!-- End Doctors -->
+
+    <!-- Start Opinions -->
+    <section class="opinions">
+      <h3>Our customers' opinions</h3>
+      <div class="container">
+        <!-- Swiper -->
+        <div class="swiper opinionSwiper">
+          <div class="swiper-wrapper">
+            <!-- For loop this slide -->
+            <div class="swiper-slide">
+              <div class="opinion_card">
+                <i class="fa-solid fa-quote-left quote"></i>
+                <p class="text_opinion">
+                  Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed
+                  diam nonumy eirmod tempor invidunt ut labore et dolore magna
+                </p>
+                <div class="person">
+                  <img src="./media/image/7w7w.jpg" alt="person" />
+                  <div class="name">
+                    <h6 class="text_person">Ahmed Hawam</h6>
+                    <div class="rating">
+                      <i class="fa-solid fa-star active"></i>
+                      <i class="fa-solid fa-star active"></i>
+                      <i class="fa-solid fa-star active"></i>
+                      <i class="fa-solid fa-star"></i>
+                      <i class="fa-solid fa-star"></i>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- For loop this slide -->
+
+            <!-- For loop this slide -->
+            <div class="swiper-slide">
+              <div class="opinion_card">
+                <i class="fa-solid fa-quote-left quote"></i>
+                <p class="text_opinion">
+                  Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed
+                  diam nonumy eirmod tempor invidunt ut labore et dolore magna
+                </p>
+                <div class="person">
+                  <img src="./media/image/7w7w.jpg" alt="person" />
+                  <div class="name">
+                    <h6 class="text_person">Ahmed Hawam</h6>
+                    <div class="rating">
+                      <i class="fa-solid fa-star active"></i>
+                      <i class="fa-solid fa-star active"></i>
+                      <i class="fa-solid fa-star active"></i>
+                      <i class="fa-solid fa-star"></i>
+                      <i class="fa-solid fa-star"></i>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- For loop this slide -->
+
+            <!-- For loop this slide -->
+            <div class="swiper-slide">
+              <div class="opinion_card">
+                <i class="fa-solid fa-quote-left quote"></i>
+                <p class="text_opinion">
+                  Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed
+                  diam nonumy eirmod tempor invidunt ut labore et dolore magna
+                </p>
+                <div class="person">
+                  <img src="./media/image/7w7w.jpg" alt="person" />
+                  <div class="name">
+                    <h6 class="text_person">Ahmed Hawam</h6>
+                    <div class="rating">
+                      <i class="fa-solid fa-star active"></i>
+                      <i class="fa-solid fa-star active"></i>
+                      <i class="fa-solid fa-star active"></i>
+                      <i class="fa-solid fa-star"></i>
+                      <i class="fa-solid fa-star"></i>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- For loop this slide -->
+
+            <!-- For loop this slide -->
+            <div class="swiper-slide">
+              <div class="opinion_card">
+                <i class="fa-solid fa-quote-left quote"></i>
+                <p class="text_opinion">
+                  Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed
+                  diam nonumy eirmod tempor invidunt ut labore et dolore magna
+                </p>
+                <div class="person">
+                  <img src="./media/image/7w7w.jpg" alt="person" />
+                  <div class="name">
+                    <h6 class="text_person">Ahmed Hawam</h6>
+                    <div class="rating">
+                      <i class="fa-solid fa-star active"></i>
+                      <i class="fa-solid fa-star active"></i>
+                      <i class="fa-solid fa-star active"></i>
+                      <i class="fa-solid fa-star"></i>
+                      <i class="fa-solid fa-star"></i>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- For loop this slide -->
+          </div>
+          <div class="swiper-pagination"></div>
+        </div>
+        <!-- Initialize Swiper -->
+        <script>
+          var swiper = new Swiper(".opinionSwiper", {
+            loop: true,
+            centeredSlides: true,
+            breakpoints: {
+              300: {
+                slidesPerView: 1,
+              },
+
+              768: {
+                slidesPerView: 2,
+              },
+
+              1024: {
+                slidesPerView: 3,
+                spaceBetween: 30,
+              },
+            },
+            autoplay: {
+              delay: 5000,
+              disableOnInteraction: false,
+            },
+            pagination: {
+              el: ".swiper-pagination",
+              clickable: true,
+            },
+          });
+        </script>
+      </div>
+    </section>
+    <!-- End Opinions -->
+
+    <!-- Start Partners -->
+    <section class="partners">
+      <div class="container">
+        <!-- Swiper -->
+    <div class="swiper partnerSwiper">
+      <div class="swiper-wrapper">
+        <!-- For loop this logo-->
+        <div class="swiper-slide">
+          <img src="./media/image/partner/logo.png" alt="logo">
+        </div>
+        <!-- For loop this logo-->
+
+        <!-- For loop this logo-->
+        <div class="swiper-slide">
+          <img src="./media/image/partner/logo1.png" alt="logo">
+        </div>
+        <!-- For loop this logo-->
+
+        <!-- For loop this logo-->
+        <div class="swiper-slide">
+          <img src="./media/image/partner/logo2.png" alt="logo">
+        </div>
+        <!-- For loop this logo-->
+
+        <!-- For loop this logo-->
+        <div class="swiper-slide">
+          <img src="./media/image/partner/logo3.png" alt="logo">
+        </div>
+        <!-- For loop this logo-->
+
+        <!-- For loop this logo-->
+        <div class="swiper-slide">
+          <img src="./media/image/partner/logo4.png" alt="logo">
+        </div>
+        <!-- For loop this logo-->
+      </div>
+    </div>
+
+    <!-- Initialize Swiper -->
+    <script>
+      var swiper = new Swiper(".partnerSwiper", {
+        slidesPerView: 5,
+        spaceBetween: 30,
+        loop: true,
+        breakpoints: {
+          300: {
+            slidesPerView: 2,
+          },
+          
+          768: {
+            slidesPerView: 3,
+          },
+          
+          1024: {
+            slidesPerView: 5,
+            spaceBetween: 30,
+          },
+        },
+        autoplay: {
+          delay: 5000,
+          disableOnInteraction: false,
+        },
+      });
+    </script>
+      </div>
+    </section>
+    <!-- End Partners -->
 
     <!-- start footer section -->
     <footer>
