fix merge conflict

--- a/single-blog.html
+++ b/single-blog.html
@@ -124,16 +124,12 @@
 
 
     <!-- START BREADCRUMB -->
-    <section class="braedcrumb">
+    <section class="breadcrumb">
         <div class="container">
-            <div class="row">
-                <div class="col-lg-5 col-md-7 col-12">
-                    <div class="content">
-                        <i class="fa-solid fa-chevron-left"></i>
-                        <a href="#">Library </a>
-                        <span>/News</span>
-                    </div>
-                </div>
+            <div class="content">
+                <a href="#"><i class="fa-solid fa-chevron-left"></i></a>
+                <a href="#">Library</a>
+                <span> / News</span>
             </div>
         </div>
     </section>
