--- a/doctors.html
+++ b/doctors.html
@@ -163,14 +163,14 @@
     <section class="doctor_header">
       <div class="container">
         <div class="row align-items-center">
-          <div class="col-lg-6 col-12">
+          <div class="col-md-6 col-12">
             <h2>Miswak Medical Group Welcomes You</h2>
             <p>
               With a selection of the best consultants and specialists in the
               Kingdom At your service throughout the day
             </p>
           </div>
-          <div class="col-lg-6 col-12">
+          <div class="col-md-6 col-12">
             <img src="./media/image/header_doctor.png" alt="header_doctor" />
           </div>
         </div>
@@ -287,7 +287,7 @@
             <p class="title">Booking Time</p>
             <!-- Swiper -->
             <div class="swiper bookingSwiper">
-              <form class="swiper-wrapper">
+              <form action="booking_doctor.html" class="swiper-wrapper">
                 <!-- For loop this booking -->
                 <div class="swiper-slide">
                   <li class="day">Today</li>
@@ -479,31 +479,31 @@
             <p class="title">Booking Time</p>
             <!-- Swiper -->
             <div class="swiper bookingSwiper">
-              <form class="swiper-wrapper">
+              <form action="booking_doctor.html" class="swiper-wrapper">
                 <!-- For loop this booking -->
                 <div class="swiper-slide">
                   <li class="day">Today</li>
                   <ul>
                     <li>
                       <div class="form-check">
-                        <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
-                        <label class="form-check-label" for="flexRadioDefault1">
+                        <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault20">
+                        <label class="form-check-label" for="flexRadioDefault20">
                           4:30 pm
                         </label>
                       </div>
                     </li>
                     <li>
                       <div class="form-check">
-                        <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2">
-                        <label class="form-check-label" for="flexRadioDefault2">
+                        <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault21">
+                        <label class="form-check-label" for="flexRadioDefault21">
                           5:15 pm
                         </label>
                       </div>
                     </li>
                     <li>
                       <div class="form-check">
-                        <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault3">
-                        <label class="form-check-label" for="flexRadioDefault3">
+                        <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault22">
+                        <label class="form-check-label" for="flexRadioDefault22">
                           6:00 pm
                         </label>
                       </div>
@@ -519,24 +519,24 @@
                   <ul>
                     <li>
                       <div class="form-check">
-                        <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault4">
-                        <label class="form-check-label" for="flexRadioDefault4">
+                        <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault23">
+                        <label class="form-check-label" for="flexRadioDefault23">
                           4:30 pm
                         </label>
                       </div>
                     </li>
                     <li>
                       <div class="form-check">
-                        <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault5">
-                        <label class="form-check-label" for="flexRadioDefault5">
+                        <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault24">
+                        <label class="form-check-label" for="flexRadioDefault24">
                           5:15 pm
                         </label>
                       </div>
                     </li>
                     <li>
                       <div class="form-check">
-                        <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault6">
-                        <label class="form-check-label" for="flexRadioDefault6">
+                        <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault25">
+                        <label class="form-check-label" for="flexRadioDefault25">
                           6:00 pm
                         </label>
                       </div>
@@ -552,24 +552,24 @@
                   <ul>
                     <li>
                       <div class="form-check">
-                        <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault7">
-                        <label class="form-check-label" for="flexRadioDefault7">
+                        <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault30">
+                        <label class="form-check-label" for="flexRadioDefault30">
                           4:30 pm
                         </label>
                       </div>
                     </li>
                     <li>
                       <div class="form-check">
-                        <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault8">
-                        <label class="form-check-label" for="flexRadioDefault8">
+                        <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault31">
+                        <label class="form-check-label" for="flexRadioDefault31">
                           5:15 pm
                         </label>
                       </div>
                     </li>
                     <li>
                       <div class="form-check">
-                        <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault9">
-                        <label class="form-check-label" for="flexRadioDefault9">
+                        <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault32">
+                        <label class="form-check-label" for="flexRadioDefault32">
                           6:00 pm
                         </label>
                       </div>
@@ -585,24 +585,24 @@
                   <ul>
                     <li>
                       <div class="form-check">
-                        <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault10">
-                        <label class="form-check-label" for="flexRadioDefault10">
+                        <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault33">
+                        <label class="form-check-label" for="flexRadioDefault33">
                           4:30 pm
                         </label>
                       </div>
                     </li>
                     <li>
                       <div class="form-check">
-                        <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault11">
-                        <label class="form-check-label" for="flexRadioDefault11">
+                        <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault34">
+                        <label class="form-check-label" for="flexRadioDefault34">
                           5:15 pm
                         </label>
                       </div>
                     </li>
                     <li>
                       <div class="form-check">
-                        <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault12">
-                        <label class="form-check-label" for="flexRadioDefault12">
+                        <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault35">
+                        <label class="form-check-label" for="flexRadioDefault35">
                           6:00 pm
                         </label>
                       </div>
@@ -671,31 +671,31 @@
             <p class="title">Booking Time</p>
             <!-- Swiper -->
             <div class="swiper bookingSwiper">
-              <form class="swiper-wrapper">
+              <form action="booking_doctor.html" class="swiper-wrapper">
                 <!-- For loop this booking -->
                 <div class="swiper-slide">
                   <li class="day">Today</li>
                   <ul>
                     <li>
                       <div class="form-check">
-                        <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
-                        <label class="form-check-label" for="flexRadioDefault1">
+                        <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault40">
+                        <label class="form-check-label" for="flexRadioDefault40">
                           4:30 pm
                         </label>
                       </div>
                     </li>
                     <li>
                       <div class="form-check">
-                        <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2">
-                        <label class="form-check-label" for="flexRadioDefault2">
+                        <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault41">
+                        <label class="form-check-label" for="flexRadioDefault41">
                           5:15 pm
                         </label>
                       </div>
                     </li>
                     <li>
                       <div class="form-check">
-                        <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault3">
-                        <label class="form-check-label" for="flexRadioDefault3">
+                        <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault42">
+                        <label class="form-check-label" for="flexRadioDefault42">
                           6:00 pm
                         </label>
                       </div>
@@ -711,24 +711,24 @@
                   <ul>
                     <li>
                       <div class="form-check">
-                        <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault4">
-                        <label class="form-check-label" for="flexRadioDefault4">
+                        <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault43">
+                        <label class="form-check-label" for="flexRadioDefault43">
                           4:30 pm
                         </label>
                       </div>
                     </li>
                     <li>
                       <div class="form-check">
-                        <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault5">
-                        <label class="form-check-label" for="flexRadioDefault5">
+                        <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault44">
+                        <label class="form-check-label" for="flexRadioDefault44">
                           5:15 pm
                         </label>
                       </div>
                     </li>
                     <li>
                       <div class="form-check">
-                        <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault6">
-                        <label class="form-check-label" for="flexRadioDefault6">
+                        <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault45">
+                        <label class="form-check-label" for="flexRadioDefault45">
                           6:00 pm
                         </label>
                       </div>
@@ -744,24 +744,24 @@
                   <ul>
                     <li>
                       <div class="form-check">
-                        <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault7">
-                        <label class="form-check-label" for="flexRadioDefault7">
+                        <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault46">
+                        <label class="form-check-label" for="flexRadioDefault46">
                           4:30 pm
                         </label>
                       </div>
                     </li>
                     <li>
                       <div class="form-check">
-                        <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault8">
-                        <label class="form-check-label" for="flexRadioDefault8">
+                        <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault47">
+                        <label class="form-check-label" for="flexRadioDefault47">
                           5:15 pm
                         </label>
                       </div>
                     </li>
                     <li>
                       <div class="form-check">
-                        <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault9">
-                        <label class="form-check-label" for="flexRadioDefault9">
+                        <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault48">
+                        <label class="form-check-label" for="flexRadioDefault48">
                           6:00 pm
                         </label>
                       </div>
