--- a/login.html
+++ b/login.html
@@ -180,7 +180,7 @@
           <label for="one" class="box first">
             <div class="plan">
               <div class="text">
-                <img src="media/image/appel.png" alt="adv" />
+                <img src="media/image/apple.png" alt="adv" />
                 <p>Continue With Apple</p>
               </div>
             </div>
@@ -198,7 +198,7 @@
           <label for="three" class="box three">
             <div class="plan">
               <div class="text">
-                <img src="media/image/twiiter.png" alt="adv" />
+                <img src="media/image/twitter.png" alt="adv" />
                 <p>Continue With Twitter</p>
               </div>
             </div>
