--- a/single-blog.html
+++ b/single-blog.html
@@ -140,14 +140,10 @@
         <div class="container">
             <div class="row">
                 <!-- start col -->
-                <div class="col-lg-8 col-md-7 col-12">
+                <div class="col-lg-8 col-md-12 col-12">
                     <!-- start content -->
                     <div class="content_blog">
                         <h2>Latest Equipments For The Heart Treatments</h2>
-                        <h5>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod orem ipsum
-                            dolor sit amet, consetetur elitr, sed diam nonumy eirmod Lorem ipsum dolor sit amet,
-                            consetetur sadipscing elitr, sed diam nonumy eirmod orem ipsum dolor sit amet, consetetur
-                            elitr, sed diam nonumy eirmod</h5>
                         <img src="media/image/blog2.png" alt="">
                         <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod orem ipsum
                             dolor sit amet, consetetur elitr, sed diam nonumy eirmod Lorem ipsum dolor sit amet,
@@ -178,7 +174,7 @@
                 <!-- finish col -->
                 <!-- start col -->
 
-                <div class="col-lg-4 col-md-5 col-12">
+                <div class="col-lg-4 col-md-12 col-12">
                     <!-- sidebar -->
                     <div class="sidebar_blog">
                         <div class="simallair_hrader">
@@ -211,7 +207,7 @@
                                 consetetur elitr, sed diam nonumy eirmod
                             </p>
                             <a href="" class="read_more">
-                                read more
+                                Read More
                                 <i class="fa-solid fa-plus"></i>
                             </a>
                         </div>
@@ -244,7 +240,7 @@
                                 consetetur elitr, sed diam nonumy eirmod
                             </p>
                             <a href="" class="read_more">
-                                read more
+                                Read More
                                 <i class="fa-solid fa-plus"></i>
                             </a>
                         </div>
