--- a/booking_doctor.html
+++ b/booking_doctor.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/fontawesome.min.css" />
     <link rel="stylesheet" href="sass/style.min.css" />
+    <link rel="stylesheet" href="css/bootstrap-select.min.css" />
+    <link rel="stylesheet" href="css/swiper-bundle.min.css" />
     <link rel="stylesheet" href="css/sweet-alert.css" />
     <!-- ? Main CSS -->
 
@@ -16,6 +18,8 @@
     <script src="js/bootstrap.min.js"></script>
     <script src="js/all.min.js"></script>
     <script src="js/fontawesome.min.js"></script>
+    <script src="js/swiper-bundle.min.js"></script>
+    <script src="js/bootstrap-select.min.js"></script>
     <script src="js/sweet-alert.min.js"></script>
     <!-- ? Main JavaScript -->
 
@@ -88,7 +92,7 @@
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link  " aria-current="page" href="#">Home</a>
+              <a class="nav-link" aria-current="page" href="index.html">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">About Us</a>
@@ -155,127 +159,96 @@
     </nav>
     <!-- End Navbar -->
 
-    <!-- START BREADCRUMB -->
-    <section class="breadcrumb">
+    <!-- Start Doctor header -->
+    <section class="doctor_header">
       <div class="container">
-        <div class="content">
-          <a href="index.html"><i class="fa-solid fa-chevron-left"></i></a>
-          <span>Sign Up</span>
+        <div class="row align-items-center">
+          <div class="col-md-6 col-12">
+            <h2>Miswak Medical Group Welcomes You</h2>
+            <p>
+              With a selection of the best consultants and specialists in the
+              Kingdom At your service throughout the day
+            </p>
+          </div>
+          <div class="col-md-6 col-12">
+            <img src="./media/image/header_doctor.png" alt="header_doctor" />
+          </div>
         </div>
       </div>
     </section>
-    <!-- FINISH BREADCRUMB -->
+    <!-- End Doctor header -->
 
-    <!-- start form sign  -->
-    <form action="#" class="form_sign">
-      <h5>Sign Up</h5>
-      <!-- start radio button -->
-
-      <div class="collection">
-        <!-- content -->
-        <div class="content">
-          <input type="radio" name="rd" id="one" />
-          <input type="radio" name="rd" id="two" />
-          <input type="radio" name="rd" id="three" />
-          <label for="one" class="box first">
-            <div class="plan">
-              <div class="text">
-                <img src="media/image/apple.png" alt="adv" />
-                <p>Continue With Apple</p>
-              </div>
+    <!-- Start Doctor booking -->
+    <section class="booking_doctor">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-7 col-12">
+                    <form action="booking_information.html" class="personal_information">
+                        <h6>Personal information</h6>
+                        <ul>
+                            <li>
+                                <a href="#">
+                                    <img src="./media/image/google.png" alt="google"> Continue With Google
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    <img src="./media/image/apple.png" alt="apple"> Continue With Apple
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    <img src="./media/image/twitter.png" alt="google"> Continue With Twitter
+                                </a>
+                            </li>
+                        </ul>
+                        <div class="or">OR</div>
+                        <div class="form-group">
+                            <i class="fa-solid fa-user"></i>
+                          <input type="text" name="" id="" class="form-control" placeholder="your full name">
+                        </div>
+                        <div class="form-group">
+                            <i class="fa-solid fa-phone"></i>
+                          <input type="text" name="" id="" class="form-control" placeholder="your phone number">
+                        </div>
+                        <div class="form-group">
+                            <i class="fa-solid fa-envelope"></i>
+                          <input type="email" name="" id="" class="form-control" placeholder="your email address (optional)">
+                        </div>
+                        <button type="submit" class="btn submit_btn">Book Now</button>
+                    </form>
+                </div>
+                <div class="col-lg-5 col-12">
+                    <div class="booking_summery">
+                        <h6>Booking summery</h6>
+                        <div class="card_doctor">
+                            <img src="./media/image/doctors1.jpg" alt="doctors">
+                            <div class="details_doctor">
+                                <p class="title">Doctor . Adham Abdulreahman</p>
+                                <div class="rates">
+                                    <i class="fa-solid fa-star active"></i>
+                                    <i class="fa-solid fa-star active"></i>
+                                    <i class="fa-solid fa-star active"></i>
+                                    <i class="fa-solid fa-star active"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <span>(1120 reviews)</span>
+                                </div>
+                                <span class="address">ElDamam Branch , Jasmine District , A2esha …..</span>
+                            </div>
+                        </div>
+                        <div class="booking_time">
+                            <div class="book">
+                                <h6>Booking Time</h6>
+                                <div class="time"><i class="fa-solid fa-calendar-days"></i>Sat 22/3 - 4:30 Pm</div>
+                            </div>
+                            <a href="doctors.html" class="booking_btn btn">Change Date <i class="fa-solid fa-arrow-right-long"></i></a>
+                        </div>
+                    </div>
+                </div>
             </div>
-          </label>
-
-          <label for="two" class="box two">
-            <div class="plan">
-              <div class="text">
-                <img src="media/image/google.png" alt="adv" />
-                <p>Continue With Google</p>
-              </div>
-            </div>
-          </label>
-
-          <label for="three" class="box three">
-            <div class="plan">
-              <div class="text">
-                <img src="media/image/twitter.png" alt="adv" />
-                <p>Continue With Twitter</p>
-              </div>
-            </div>
-          </label>
         </div>
-        <!-- content -->
-      </div>
-      <!-- finish radio button -->
-      <div class="or">or</div>
-      <!-- start input group -->
-      <div class="form-group">
-        <input
-          type="text"
-          class="form-control"
-          name="name"
-          id="name"
-          placeholder="your full name"
-          required
-        />
-        <span class="icon_form"><i class="fa-regular fa-user"></i></span>
-      </div>
-      <!-- finish input group -->
-
-      <!-- start input group -->
-      <div class="form-group">
-        <input
-          type="tel"
-          class="form-control"
-          name="phone"
-          id="phone"
-          placeholder="your phone number"
-          required
-        />
-        <span class="icon_form"><i class="fa-solid fa-phone"></i></span>
-      </div>
-      <!-- finish input group -->
-
-      <!-- start input group -->
-      <div class="form-group">
-        <input
-          type="email"
-          class="form-control"
-          name="email"
-          id="email"
-          placeholder="your email address (optional)"
-        />
-        <span class="icon_form"><i class="fa-regular fa-envelope"></i></span>
-      </div>
-      <!-- finish input group -->
-
-      <!-- start input group -->
-      <div class="form-group">
-        <input
-          type="password"
-          class="form-control"
-          name="password"
-          id="password"
-          placeholder="enter new password"
-        />
-        <span class="icon_form"><i class="fa-solid fa-lock"></i></span>
-      </div>
-      <!-- finish input group -->
-
-      <button type="submit" class="btn btn_submit" name="submit" id="submit">
-        join now
-      </button>
-
-      <p class="term">
-        by signing in you are agree to
-        <a target="_blank" href="#">Terms&Conditions </a>
-      </p>
-      <p class="login">
-        Already have an account ?
-        <a target="_blank" href="login.html">join now</a>
-      </p>
-    </form>
-    <!-- finish form sign  -->
+    </section>
+    <!-- End Doctor booking -->
 
     <!-- start footer section -->
     <footer>
@@ -435,5 +408,15 @@
       </div>
     </footer>
     <!-- end footer section -->
+
+    <script src="js/main.js"></script>
+    <script src="js/counterup.min.js"></script>
+    <script src="js/waypoints.min.js"></script>
+    <script>
+      $(".counter").counterUp({
+        delay: 20,
+        time: 2000,
+      });
+    </script>
   </body>
 </html>
