--- a/booking_information.html
+++ b/booking_information.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/fontawesome.min.css" />
     <link rel="stylesheet" href="sass/style.min.css" />
+    <link rel="stylesheet" href="css/bootstrap-select.min.css" />
+    <link rel="stylesheet" href="css/swiper-bundle.min.css" />
     <link rel="stylesheet" href="css/sweet-alert.css" />
     <!-- ? Main CSS -->
 
@@ -16,6 +18,8 @@
     <script src="js/bootstrap.min.js"></script>
     <script src="js/all.min.js"></script>
     <script src="js/fontawesome.min.js"></script>
+    <script src="js/swiper-bundle.min.js"></script>
+    <script src="js/bootstrap-select.min.js"></script>
     <script src="js/sweet-alert.min.js"></script>
     <!-- ? Main JavaScript -->
 
@@ -88,7 +92,7 @@
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link  " aria-current="page" href="#">Home</a>
+              <a class="nav-link" aria-current="page" href="index.html">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">About Us</a>
@@ -160,122 +164,202 @@
       <div class="container">
         <div class="content">
           <a href="index.html"><i class="fa-solid fa-chevron-left"></i></a>
-          <span>Sign Up</span>
+          <span>Booking Information</span>
         </div>
       </div>
     </section>
     <!-- FINISH BREADCRUMB -->
 
-    <!-- start form sign  -->
-    <form action="#" class="form_sign">
-      <h5>Sign Up</h5>
-      <!-- start radio button -->
+    <section class="booking_info">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-7 col-12">
+            <form action="" class="payment_methods">
+              <h6>Choose The Payment Method</h6>
+              <div class="payment">
+                <!-- Start Cash On Clinic -->
+                <div class="form-check">
+                  <input
+                    class="form-check-input"
+                    type="radio"
+                    name="payment"
+                    value="CashOnClinic"
+                    onclick="CashOnClinic();"
+                    id="CashOnClinicLabel"
+                  />
+                  <label class="form-check-label" for="CashOnClinicLabel">
+                    Cash On The Clinic
+                  </label>
+                </div>
+                <!-- End Cash On Clinic -->
 
-      <div class="collection">
-        <!-- content -->
-        <div class="content">
-          <input type="radio" name="rd" id="one" />
-          <input type="radio" name="rd" id="two" />
-          <input type="radio" name="rd" id="three" />
-          <label for="one" class="box first">
-            <div class="plan">
-              <div class="text">
-                <img src="media/image/apple.png" alt="adv" />
-                <p>Continue With Apple</p>
-              </div>
-            </div>
-          </label>
+                <!-- Start Credit Card -->
+                <div class="form-check">
+                  <input
+                    class="form-check-input"
+                    type="radio"
+                    name="payment"
+                    value="CreditCard"
+                    onclick="CreditCard();"
+                    id="CreditCardLabel"
+                  />
+                  <label class="form-check-label" for="CreditCardLabel">
+                    Credit Card
+                  </label>
+                </div>
+                <!-- Start Form data Credit Card -->
+                <div id="CreditCard" class="hide">
+                  <div class="row">
+                    <div class="col-lg-6 col-12">
+                      <div class="form-group">
+                        <label for="">Name On Card</label>
+                        <input
+                          type="text"
+                          name=""
+                          id=""
+                          class="form-control"
+                          placeholder="Name On Card"
+                        />
+                      </div>
+                    </div>
+                    <div class="col-lg-6 col-12">
+                      <div class="form-group">
+                        <label for="">Card Number</label>
+                        <input
+                          type="number"
+                          name=""
+                          id=""
+                          class="form-control"
+                          placeholder="Card Number"
+                        />
+                      </div>
+                    </div>
+                    <div class="col-lg-4 col-12">
+                      <div class="form-group">
+                        <label for="">Expiry Month</label>
+                        <input
+                          type="number"
+                          name=""
+                          id=""
+                          class="form-control"
+                          placeholder="Mm"
+                        />
+                      </div>
+                    </div>
+                    <div class="col-lg-4 col-12">
+                      <div class="form-group">
+                        <label for="">Expiry Year</label>
+                        <input
+                          type="number"
+                          name=""
+                          id=""
+                          class="form-control"
+                          placeholder="Yy"
+                        />
+                      </div>
+                    </div>
+                    <div class="col-lg-4 col-12">
+                      <div class="form-group">
+                        <label for="">CVV</label>
+                        <input
+                          type="number"
+                          name=""
+                          id=""
+                          class="form-control"
+                          placeholder="CVV"
+                        />
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <!-- End Form data Credit Card -->
 
-          <label for="two" class="box two">
-            <div class="plan">
-              <div class="text">
-                <img src="media/image/google.png" alt="adv" />
-                <p>Continue With Google</p>
-              </div>
-            </div>
-          </label>
+                <!-- End Credit Card -->
+                <script>
+                  function CashOnClinic() {
+                    document.getElementById("CreditCard").style.display =
+                      "none";
+                  }
+                  function CreditCard() {
+                    document.getElementById("CreditCard").style.display =
+                      "block";
+                  }
+                </script>
+                <div class="form-check">
+                  <input
+                    class="form-check-input"
+                    type="checkbox"
+                    value=""
+                    id="flexCheckChecked"
+                  />
+                  <label class="form-check-label" for="flexCheckChecked">
+                    I have read and accept
+                    <span
+                      class="terms"
+                      data-bs-toggle="modal"
+                      data-bs-target="#termsModal"
+                      >Terms & Conditions</span
+                    >
+                  </label>
+                </div>
 
-          <label for="three" class="box three">
-            <div class="plan">
-              <div class="text">
-                <img src="media/image/twitter.png" alt="adv" />
-                <p>Continue With Twitter</p>
+                <!-- Modal -->
+                <div
+                  class="modal fade"
+                  id="termsModal"
+                  tabindex="-1"
+                  aria-labelledby="termsModalLabel"
+                  aria-hidden="true"
+                >
+                  <div class="modal-dialog modal-dialog-centered">
+                    <div class="modal-content">
+                      <div class="modal-header">
+                        <h5 class="modal-title" id="termsModalLabel">
+                            Terms & Conditions
+                        </h5>
+                        <button
+                          type="button"
+                          class="btn-close"
+                          data-bs-dismiss="modal"
+                          aria-label="Close"
+                        ></button>
+                      </div>
+                      <div class="modal-body">...</div>
+                    </div>
+                  </div>
+                </div>
+                <button type="submit" class="btn btn_submit">
+                  Confirm and pay
+                </button>
               </div>
+            </form>
+          </div>
+          <div class="col-lg-5 col-12">
+            <div class="booking_summery_cost">
+                <h6>Booking summery</h6>
+                <ul class="costs">
+                    <li>
+                        <span>Service Cost</span>
+                        <span>500 SAR</span>
+                    </li>
+                    <li>
+                        <span>Concultation Cost</span>
+                        <span>100 SAR</span>
+                    </li>
+                    <li>
+                        <span>Fees</span>
+                        <span>10 SAR</span>
+                    </li>
+                </ul>
+                <div class="total">
+                    <span>Total</span>
+                    <span>610 SAR</span>
+                </div>
             </div>
-          </label>
+          </div>
         </div>
-        <!-- content -->
       </div>
-      <!-- finish radio button -->
-      <div class="or">or</div>
-      <!-- start input group -->
-      <div class="form-group">
-        <input
-          type="text"
-          class="form-control"
-          name="name"
-          id="name"
-          placeholder="your full name"
-          required
-        />
-        <span class="icon_form"><i class="fa-regular fa-user"></i></span>
-      </div>
-      <!-- finish input group -->
-
-      <!-- start input group -->
-      <div class="form-group">
-        <input
-          type="tel"
-          class="form-control"
-          name="phone"
-          id="phone"
-          placeholder="your phone number"
-          required
-        />
-        <span class="icon_form"><i class="fa-solid fa-phone"></i></span>
-      </div>
-      <!-- finish input group -->
-
-      <!-- start input group -->
-      <div class="form-group">
-        <input
-          type="email"
-          class="form-control"
-          name="email"
-          id="email"
-          placeholder="your email address (optional)"
-        />
-        <span class="icon_form"><i class="fa-regular fa-envelope"></i></span>
-      </div>
-      <!-- finish input group -->
-
-      <!-- start input group -->
-      <div class="form-group">
-        <input
-          type="password"
-          class="form-control"
-          name="password"
-          id="password"
-          placeholder="enter new password"
-        />
-        <span class="icon_form"><i class="fa-solid fa-lock"></i></span>
-      </div>
-      <!-- finish input group -->
-
-      <button type="submit" class="btn btn_submit" name="submit" id="submit">
-        join now
-      </button>
-
-      <p class="term">
-        by signing in you are agree to
-        <a target="_blank" href="#">Terms&Conditions </a>
-      </p>
-      <p class="login">
-        Already have an account ?
-        <a target="_blank" href="login.html">join now</a>
-      </p>
-    </form>
-    <!-- finish form sign  -->
+    </section>
 
     <!-- start footer section -->
     <footer>
@@ -435,5 +519,15 @@
       </div>
     </footer>
     <!-- end footer section -->
+
+    <script src="js/main.js"></script>
+    <script src="js/counterup.min.js"></script>
+    <script src="js/waypoints.min.js"></script>
+    <script>
+      $(".counter").counterUp({
+        delay: 20,
+        time: 2000,
+      });
+    </script>
   </body>
 </html>
