--- a/login.html
+++ b/login.html
@@ -242,7 +242,7 @@
 
       <p class="login">
         Don't have an account ?
-        <a target="_blank" href="signup.html">Register</a>
+        <a  href="signup.html">Register</a>
       </p>
     </form>
     <!-- finish form login  -->
