--- a/signup.html
+++ b/signup.html
@@ -268,11 +268,11 @@
 
       <p class="term">
         by signing in you are agree to
-        <a target="_blank" href="#">Terms&Conditions </a>
+        <a  href="#">Terms&Conditions </a>
       </p>
       <p class="login">
         Already have an account ?
-        <a target="_blank" href="login.html">join now</a>
+        <a  href="login.html">join now</a>
       </p>
     </form>
     <!-- finish form sign  -->
